# juvenal

./: CLAUDE.md  README.md  mockup.py  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
juvenal/: __init__.py  api.py  backends.py  checkers.py  cli.py  display.py  engine.py  notifications.py  plan_validation.py  state.py  workflow.py
juvenal/prompts/: checker-always-fail.md  checker-grant-reviewer.md  checker-llm-writing.md  checker-professor.md  checker-security-engineer.md  checker-senior-tester.md  checker-technical-writer.md  checker-tester.md  implementer-professor-writer.md  implementer-software-engineer.md  plan.md
juvenal/templates/default/: workflow.yaml
juvenal/workflows/: plan.yaml  research-paper.yaml
juvenal/workflows/plan-phases/: 01-plan-draft.md  02-plan-review.md  02-plan-smokecheck.md  03-plan-refine.md  03-technical-detail.md  04-plan-review.md  04-technical-review.md  05-phase-split.md  05-plan-cleanup.md  06-design-review.md  06-plan-cleanup-review.md  07-feasibility-review.md  07-plan-split.md  08-plan-split-review.md  08-validation-design.md  08-write-workflow.md  09-validation-review.md  09-write-workflow.md  09b-yaml-validate.md  10-workflow-review.md  10-write-workflow.md  (+1 more)
plugin/.claude-plugin/: plugin.json
skills/juvenal/: SKILL.md
tests/: conftest.py  mockup.py  test_api.py  test_backends.py  test_checkers.py  test_cli.py  test_e2e_claude.py  test_e2e_codex.py  test_engine.py  test_mockup.py  test_plan_validation.py  test_round2.py  test_state.py  test_validation.py  test_workflow.py
(+17 files in other folders)
